--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.3",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.532.0",
+    "mongoose": "^8.17.0",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
