--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
     "formidable": "^3.5.4",
     "lucide-react": "^0.532.0",
-    "mongoose": "^8.17.0",
+    "mongodb": "^5.9.2",
+    "mongoose": "^7.8.7",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-player": "^3.3.1",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
