--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.532.0",
     "mongodb": "^5.9.2",
     "mongoose": "^7.8.7",
@@ -24,11 +25,14 @@
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-player": "^3.3.1",
+    "react-spinners": "^0.17.0",
     "swiper": "^11.2.10",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
