--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.532.0",
+    "module-alias": "^2.2.3",
     "mongodb": "^5.9.2",
     "mongoose": "^7.8.7",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "qrcode.react": "^4.2.0",
