--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
+    "eslint-config-next": "^15.5.7",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "jspdf": "^3.0.4",
@@ -25,7 +26,7 @@
     "module-alias": "^2.2.3",
     "mongodb": "^5.9.2",
     "mongoose": "^7.8.7",
-    "next": "15.4.4",
+    "next": "^15.5.7",
     "next-auth": "^4.24.11",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
@@ -33,8 +34,8 @@
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "qs": "^6.14.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-player": "^3.3.1",
     "react-spinners": "^0.17.0",
     "swiper": "^11.2.10",
@@ -52,7 +53,6 @@
     "@types/swiper": "^5.4.3",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.4.4",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
